@@ -2,11 +2,11 @@
 
 [assembly: AssemblyCompany("Digimezzo")]
 [assembly: AssemblyCopyright("Copyright Digimezzo © 2013 - 2017")]
-[assembly: AssemblyVersion("1.1.2.495")]
-[assembly: AssemblyFileVersion("1.1.2.495")]
+[assembly: AssemblyVersion("1.1.3.496")]
+[assembly: AssemblyFileVersion("1.1.3.496")]
 
 #if DEBUG
-[assembly: AssemblyInformationalVersion("1.1.2.495 Preview")]
+[assembly: AssemblyInformationalVersion("1.1.3.496 Preview")]
 #else
-[assembly: AssemblyInformationalVersion("1.1.2.495")]
+[assembly: AssemblyInformationalVersion("1.1.3.496")]
 #endif
